@@ -2099,3 +2099,4 @@
 * pheno:   added g_mode bitflag cvar (see docs)
 * pheno:   added etpub_version console command
 * pheno:   added redeye's XP overflow fix
+* pheno:   added logout referee command
